# nanoMPG-v3-20225

./: .gitignore  README.md  data.py  generate_visualisations.py  main.py  pyproject.toml  train.py
data/: dataset.py  dataset_boilerplate.md  dataworks.py  synthetic_dataset_builder.py
docs/: README.md  activation_guide.md  architecture.md  dataset.md  inference_plan.md
experiments/: dashboard.py  runner.py
experiments/configs/: baseline.yaml  diamond_gelu.yaml  mixed_activations.yaml  narrow_deep.yaml  wide_silu.yaml
model/: .train.py.un~  model.py  train.py  train.py~
observability/: __init__.py  activation_tracker.py  logger.py
observability/20260721_203015/: activation_history.json  activation_summary.json  epoch_logs.json  evaluation.json  run_metadata.json  summary.json
training/: history.py  train.py
training_data/: training_10k.csv  training_25k.csv
visualisation/: visualiser.py
