[project]
name = "nonlinear-regression"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pillow>=11.0.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.18.0",
    "torch>=2.13.0",
]
